--- a/rzero.tex
+++ b/rzero.tex
@@ -58,7 +58,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Book's title and subtitle
-\title{\Huge \textbf{Rzero}  \footnote{Title is in progress.} \\ \huge Emergent physics from General Relativity \footnote{We hope.}}
+\title{\Huge \textbf{Rzero}  \footnote{Title is in progress.} \\ \huge How far can Einstein's dream take us?}
 % Author
 \author{\textsc{Thomas C Andersen}\thanks{\url{https://orcid.org/0000-0003-1614-4124}}}
 
