changed to chapter01 format for chapter names, wonder if that is a good idea.

--- a/rzero.tex
+++ b/rzero.tex
@@ -60,7 +60,7 @@
 %  - Book author name                             %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% Book's title and subtitle
+% Book's title and subtitle 
 \title{rzero}
 %\title{\Huge \textbf{Rzero}  \footnote{Title is in progress.} \\ \huge How far can Einstein's dream take us?}
 % Author
@@ -97,7 +97,7 @@ Dedicated to Katherine
 %%%%%%%%%%%%%%%%
 % Chapters %
 %%%%%%%%%%%%%%%%
-\subfile{chapters/introduction}
+\subfile{chapters/chapter01}
 
 
 \printbibliography
