got some chapters added

--- a/rzero.tex
+++ b/rzero.tex
@@ -78,6 +78,11 @@
 \begin{dedication}
 Dedicated to Katherine
 \end{dedication}
+%%%%%%%%%%%
+% Preface %
+%%%%%%%%%%%
+\subfile{chapters/preface}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Auto-generated table of contents, list of figures and list of tables %
@@ -88,16 +93,18 @@ Dedicated to Katherine
 
 \mainmatter
 
-%%%%%%%%%%%
-% Preface %
-%%%%%%%%%%%
-\subfile{chapters/preface}
 
 
 %%%%%%%%%%%%%%%%
 % Chapters %
 %%%%%%%%%%%%%%%%
-\subfile{chapters/chapter01}
+\subfile{chapters/introChapter}
+\subfile{chapters/electromagnetismChapter}
+\subfile{chapters/physicsTodayChapter}
+\subfile{chapters/energyGeneralRelativityChapter}
+\subfile{chapters/quantumMechanicsChapter}
+\subfile{chapters/quantumGravityChapter}
+\subfile{chapters/conclusionChapter}
 
 
 \printbibliography
