--- a/rzero.tex
+++ b/rzero.tex
@@ -5,10 +5,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[a4paper,11pt]{book}
-\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{lmodern}
 \usepackage{csquotes}
+\usepackage{siunitx}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Source: http://en.wikibooks.org/wiki/LaTeX/Hyperlinks %
@@ -104,6 +104,7 @@ Dedicated to Katherine
 \subfile{chapters/energyGeneralRelativityChapter}
 \subfile{chapters/quantumMechanicsChapter}
 \subfile{chapters/quantumGravityChapter}
+\subfile{chapters/electronModelChapter}
 \subfile{chapters/conclusionChapter}
 
 
