adding more work...

--- a/rzero.tex
+++ b/rzero.tex
@@ -102,6 +102,7 @@ Dedicated to Katherine
 \subfile{chapters/electromagnetismChapter}
 \subfile{chapters/physicsTodayChapter}
 \subfile{chapters/energyGeneralRelativityChapter}
+\subfile{chapters/monopoleGravitationalWavesChapter}
 \subfile{chapters/quantumMechanicsChapter}
 \subfile{chapters/quantumGravityChapter}
 \subfile{chapters/electronModelChapter}
