--- a/rzero.tex
+++ b/rzero.tex
@@ -14,6 +14,7 @@
 % Source: http://en.wikibooks.org/wiki/LaTeX/Hyperlinks %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{hyperref}
+\hypersetup{colorlinks=true,linkcolor=blue,urlcolor=blue}
 \usepackage{graphicx}
 \usepackage[english]{babel}
 
