--- a/rzero.tex
+++ b/rzero.tex
@@ -5,7 +5,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[a4paper,11pt]{book}
-\usepackage[utf8]{inputenc}
 \usepackage{lmodern}
 \usepackage{csquotes}
 \usepackage{siunitx}
@@ -78,7 +77,27 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{dedication}
 Dedicated to Katherine
+\vspace{4\baselineskip}
+
+\begin{quotation}
+So if you find someone that 
+
+gives you all of her love
+
+Take it to your heart, 
+
+don’t let it stray
+
+For one thing that’s certain
+
+You will surely be a-hurtin
+
+If you throw it all away 
+
+--Bob Dylan
+\end{quotation}
 \end{dedication}
+
 %%%%%%%%%%%
 % Preface %
 %%%%%%%%%%%
