--- a/rzero.tex
+++ b/rzero.tex
@@ -5,6 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[a4paper,11pt]{book}
+\usepackage[british]{babel}
 \usepackage{lmodern}
 \usepackage{csquotes}
 \usepackage{siunitx}
@@ -15,7 +16,6 @@
 \usepackage{hyperref}
 \hypersetup{colorlinks=true,linkcolor=blue,urlcolor=blue}
 \usepackage{graphicx}
-\usepackage[english]{babel}
 
 % https://mirror.csclub.uwaterloo.ca/CTAN/macros/latex/contrib/subfiles/subfiles.pdf
 \usepackage[backend=bibtex]{biblatex}
@@ -76,8 +76,8 @@
 % Add a dedication paragraph to dedicate your book to someone %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{dedication}
-Dedicated to Katherine
-\vspace{4\baselineskip}
+\textbf{Dedicated to Katherine}
+\vspace{2\baselineskip}
 
 \begin{quotation}
 So if you find someone that 
@@ -86,16 +86,18 @@ gives you all of her love
 
 Take it to your heart, 
 
-don’t let it stray
+don't let it stray
 
-For one thing that’s certain
+For one thing that's certain
 
 You will surely be a-hurtin
 
-If you throw it all away 
+If you throw it all away
+\smallskip
 
---Bob Dylan
 \end{quotation}
+--Bob Dylan
+
 \end{dedication}
 
 %%%%%%%%%%%
