switched to pdLatex render, biblatex from bibtex

--- a/rzero.tex
+++ b/rzero.tex
@@ -19,8 +19,10 @@
 \usepackage[english]{babel}
 
 % https://mirror.csclub.uwaterloo.ca/CTAN/macros/latex/contrib/subfiles/subfiles.pdf
-\usepackage[backend=bibtex]{biblatex}
-\addbibresource{bibtex.bib}
+\usepackage{biblatex}
+\addbibresource{tom_biblatex.bib}
+\DeclareBibliographyAlias{artwork}{misc}
+\DeclareBibliographyAlias{video}{misc}
 \usepackage{subfiles}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
