got rid of all errors and warnings in latex

--- a/rzero.tex
+++ b/rzero.tex
@@ -133,7 +133,9 @@ If you throw it all away
 \subfile{chapters/electronModelChapter}
 \subfile{chapters/conclusionChapter}
 
-
+\begin{raggedright}
+\emergencystretch=2em
 \printbibliography
+\end{raggedright}
 
 \end{document}
