--- a/rzero.tex
+++ b/rzero.tex
@@ -25,6 +25,9 @@
 \DeclareBibliographyAlias{video}{misc}
 \usepackage{subfiles}
 
+% https://mirror.its.dal.ca/ctan/fonts/fontawesome5/doc/fontawesome5.pdf
+\usepackage{fontawesome5}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 'dedication' environment: To add a dedication paragraph at the start of book %
 % Source: http://www.tug.org/pipermail/texhax/2010-June/015184.html            %
