sum the mass - which works in ISO now

--- a/jupyter/GravitationalEnergy.ipynb
+++ b/jupyter/GravitationalEnergy.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "id": "966c0ae4-4a9a-49da-9708-5d681d821cc2",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 67,
    "id": "1cfb6d6e-ca0e-4a35-85c3-7f8b076abd39",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,9 @@
      "output_type": "stream",
      "text": [
       "count:  1105466\n",
-      "dr:  1.0000191023507457e-08\n"
+      "drBar:  1.0000191023507457e-08\n",
+      "totalMassIso: 0.9999999908979107\n",
+      "totalMassS: 0.6666596705702339\n"
      ]
     },
     {
@@ -122,26 +124,39 @@
     "rBar = outerR\n",
     "stepFraction = 0.00002 # make steps smaller as we approach the min\n",
     "minStep = 0.00000001\n",
+    "totalMassS = 0.0\n",
+    "totalMassIso = 0.0\n",
     "#look for the horizon. rBar is M/2 at the horizon\n",
     "for count in range(maxPoints):\n",
-    "    dr = rBar*stepFraction + minStep # step in, step size is proportional to rbar...\n",
-    "    midR = rBar + dr/2 # use midpoint... - more accurate as I tested...\n",
+    "    drBar = rBar*stepFraction + minStep # step in, step size is proportional to rbar...\n",
+    "    midR = rBar + drBar/2 # use midpoint... - more accurate as I tested...\n",
     "    #katz is mass from rBar to rBar + dr - see Lynden-Bell - Katz 1985 \"Gravitational field energy density for spheres and black holes\"\n",
-    "    katz = dr*k*prev*prev/(midR*midR) # that's how much mass we needed to drop into the gravitational field to take this step.\n",
+    "    katz = drBar*k*prev*prev/(midR*midR) # that's how much mass we needed to drop into the gravitational field to take this step.\n",
     "    massInsideRbar = prev - katz\n",
     "    massInside.append(massInsideRbar)\n",
     "    rBars.append(rBar)\n",
     "    prev = massInsideRbar\n",
+    "\n",
+    "    # calc masses \n",
+    "    totalMassIso += katz\n",
+    "    #using good old swarzchild \n",
+    "    #rS = rBar(1 - massInsideRbar/(2.0*rBar))**2 #rS in terms of rBar from katz (rS is in good ole coords (see katz 1985 bottom pg 23p))\n",
+    "    # take correct derivative of to get dr/drBar\n",
+    "    sRFactor = (1 - massInsideRbar/(2*rBar))**2 + (massInsideRbar*(1 - massInsideRbar/(2*rBar)))/rBar\n",
+    "    totalMassS += sRFactor*katz # currently getting 2/3 of the correct mass here... must be a math error...\n",
+    "    \n",
     "    # find a good fit\n",
     "    # This is THE function.... - you can see from the graphs \n",
     "    y = M - M/(1 + 2*rBar/M)\n",
     "    fits.append(y)\n",
-    "    rBar -= dr\n",
+    "    rBar -= drBar\n",
     "    if rBar < 0:\n",
     "        print('count: ', count)\n",
-    "        print('dr: ', dr)\n",
+    "        print('drBar: ', drBar)\n",
     "        break\n",
     "\n",
+    "print('totalMassIso:',totalMassIso)\n",
+    "print('totalMassS:',totalMassS)\n",
     "#print('rBars:',rBars)\n",
     "#print('massInside:',massInside)\n",
     "\n",
@@ -187,7 +202,7 @@
    "source": [
     "# observations. \n",
     "\n",
-    "The slope is 1 near the origin. r == 0 is 'zero mass' - no singularity, no horizon...\n",
+    "The slope is 2 near the origin. r == 0 is 'zero mass' - no singularity, no horizon...\n",
     "\n",
     "Remember, the slope is 1 in isotropic coordinates..\n",
     "\n",
@@ -195,12 +210,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ddee6ac-d735-4cd5-adfb-ef56ea3b3e0b",
+   "cell_type": "markdown",
+   "id": "b8bd86f0-7263-4aec-85f0-3160a36d2dd8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate the integral...\n",
+    "\n",
+    "The mass should add up to M"
+   ]
   },
   {
    "cell_type": "code",
