working on paper for contest as well...

--- a/jupyter/GravitationalEnergy.ipynb
+++ b/jupyter/GravitationalEnergy.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 10,
    "id": "966c0ae4-4a9a-49da-9708-5d681d821cc2",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 11,
    "id": "1cfb6d6e-ca0e-4a35-85c3-7f8b076abd39",
    "metadata": {},
    "outputs": [
@@ -137,6 +137,7 @@
     "    # (see katz 1985 bottom pg 23p))\n",
     "    # take correct derivative of katz equation to get dr/drBar at a given mass\n",
     "    localRSFactor = (1 - massBirchoff/(2*rBar))**2 + (massBirchoff*(1 - massBirchoff/(2*rBar)))/rBar\n",
+    "    # NOlocalRSFactor = (1 - massBirchoff/(rBar))**2 + (massBirchoff*(1 - massBirchoff/(rBar)))/rBar\n",
     "    currentRS += drBar/localRSFactor\n",
     "    rSs.append(currentRS)\n",
     "\n",
@@ -298,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
