--- a/jupyter/ShellAttractionCython.ipynb
+++ b/jupyter/ShellAttractionCython.ipynb
@@ -14,10 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "3edd8348-675e-4d42-a4ee-fdc0d2107e62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Cython extension is already loaded. To reload it, use:\n",
+      "  %reload_ext Cython\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import time\n",
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "baa3b28b-992e-432c-9f96-f55028b86708",
    "metadata": {},
    "outputs": [],
@@ -302,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "57417623-029d-4110-9734-ee12fec1e0fc",
    "metadata": {},
    "outputs": [
@@ -318,8 +327,8 @@
       "NumMassPoints: 4152 4152\n",
       "cellSize 1.4285714285714286 0.7142857142857143 0.14285714285714285\n",
       "************************************************************************************************************************************************************************************************************************************************************************************************************!\n",
-      "dotheWork took: 18.917311906814575\n",
-      "million per sec:  273.38647383274014\n",
+      "dotheWork took: 19.20860195159912\n",
+      "million per sec:  269.2407129067642\n",
       "billion Calcs:  5.1717312\n",
       "totalForce0: 2.6483688813717463\n",
       "totalForce40: 1.184961857168057\n"
