--- a/jupyter/ShellsSphereAttractionCython.ipynb
+++ b/jupyter/ShellsSphereAttractionCython.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "The total mass of each object is M, the mass inside r is given by the formula. All the mass is not in the central object, as the mass energy of spacetime is taken into account, and thus one only measures the true mass of the object + spacetime as r >> m. \n",
     "\n",
-    "The deviation from Newtonian and regular 'curved space has no energy' spacetime is tiny, and i don't think measurable on the solar system (which is a highly studied system). For instance the difference in mass of the sun as would be used between Jupiter and Venus is:\n",
+    "The deviation from Newtonian and regular 'curved space has no energy' spacetime is tiny, and i don't think measurable on the solar system (which is a highly studied system). For instance the difference acceleration between Jupiter and Venus due to the sun is one part in 3\n",
     "\n",
     "\n"
    ]
